sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: not found: value length
    for (n <- 1 to length-2) {
                   ^